--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.md filter=lfs diff=lfs merge=lfs -text
+*.yml filter=lfs diff=lfs merge=lfs -text
 . !text !filter !merge !diff
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.npy filter=lfs diff=lfs merge=lfs -text
