--- a/environment.yml
+++ b/environment.yml
@@ -1,17 +1,158 @@
 name: sf_building_complaints
 channels:
+  - conda-forge
   - defaults
 dependencies:
-  - pip=21.2.4
-  - python=3.9.5
+  - appnope=0.1.2=py39hecd8cb5_1001
+  - async_generator=1.10=pyhd3eb1b0_0
+  - attrs=21.2.0=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - blas=2.11=openblas
+  - bottleneck=1.3.2=py39he3068b8_1
+  - ca-certificates=2021.7.5=hecd8cb5_1
+  - certifi=2021.5.30=py39hecd8cb5_0
+  - cffi=1.14.6=py39h2125817_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - freetype=2.10.4=ha233b18_0
+  - importlib-metadata=4.8.1=py39hecd8cb5_0
+  - importlib_metadata=4.8.1=hd3eb1b0_0
+  - ipykernel=6.4.1=py39h71a6800_0
+  - ipython=7.27.0=py39h01d92e1_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - jedi=0.18.0=py39hecd8cb5_1
+  - jinja2=3.0.1=pyhd3eb1b0_0
+  - joblib=1.0.1=pyhd3eb1b0_0
+  - jpeg=9d=h9ed2024_0
+  - jsonschema=3.2.0=pyhd3eb1b0_2
+  - jupyter_client=7.0.1=pyhd3eb1b0_0
+  - jupyter_contrib_core=0.3.3=py_2
+  - jupyter_core=4.7.1=py39hecd8cb5_0
+  - jupyter_nbextensions_configurator=0.4.1=py39h6e9494a_2
+  - jupyterlab_pygments=0.1.2=py_0
+  - lcms2=2.12=hf1fd2bf_0
+  - libblas=3.8.0=11_openblas
+  - libcblas=3.8.0=11_openblas
+  - libcxx=12.0.0=h2f01273_0
+  - libffi=3.3=hb1e8313_2
+  - libgfortran=3.0.1=h93005f0_2
+  - liblapack=3.8.0=11_openblas
+  - liblapacke=3.8.0=11_openblas
+  - libopenblas=0.3.6=hdc02c5d_2
+  - libpng=1.6.37=ha441bb4_0
+  - libsodium=1.0.18=h1de35cc_0
+  - libtiff=4.2.0=h87d7836_0
+  - libwebp-base=1.2.0=h9ed2024_0
+  - llvm-openmp=12.0.0=h0dcd299_1
+  - lz4-c=1.9.3=h23ab428_1
+  - markupsafe=2.0.1=py39h9ed2024_0
+  - matplotlib=3.4.3=py39h6e9494a_0
+  - matplotlib-base=3.4.3=py39hb07454d_0
+  - mistune=0.8.4=py39h9ed2024_1000
+  - nbconvert=6.1.0=py39hecd8cb5_0
+  - nbformat=5.1.3=pyhd3eb1b0_0
+  - ncurses=6.2=h0a44026_1
+  - nest-asyncio=1.5.1=pyhd3eb1b0_0
+  - notebook=6.4.3=py39hecd8cb5_0
+  - numexpr=2.7.3=py39h7ec9b2a_1
+  - olefile=0.46=pyhd3eb1b0_0
+  - openjpeg=2.4.0=h66ea3da_0
+  - openssl=1.1.1l=h9ed2024_0
+  - packaging=21.0=pyhd3eb1b0_0
+  - parso=0.8.2=pyhd3eb1b0_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pip=21.2.4=py37hecd8cb5_0
+  - prometheus_client=0.11.0=pyhd3eb1b0_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pycparser=2.20=py_2
+  - pygments=2.10.0=pyhd3eb1b0_0
+  - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pyrsistent=0.18.0=py39h9ed2024_0
+  - python=3.9.5=h88f2d9e_3
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.9=2_cp39
+  - pytz=2021.1=pyhd3eb1b0_0
+  - readline=8.1=h9ed2024_0
+  - scikit-learn=0.24.2=py39hb2f4e1b_0
+  - scipy=1.7.1=py39hf27351e_2
+  - seaborn=0.11.2=pyhd3eb1b0_0
+  - setuptools=58.0.4=py39hecd8cb5_0
+  - sqlite=3.36.0=hce871da_0
+  - testpath=0.5.0=pyhd3eb1b0_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
+  - tk=8.6.10=hb0a8c7a_0
+  - tornado=6.1=py39h9ed2024_0
+  - tzdata=2021a=h5d7bf9c_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - wheel=0.37.0=pyhd3eb1b0_1
+  - xz=5.2.5=h1de35cc_0
+  - yaml=0.2.5=haf1e3a3_0
+  - zeromq=4.3.4=h23ab428_0
+  - zipp=3.5.0=pyhd3eb1b0_0
+  - zlib=1.2.11=h1de35cc_3
+  - zstd=1.4.9=h322a384_0
   - pip:
-      - ipykernel==6.4.1
-      - jupyter_nbextensions_configurator==0.4.1
-      - matplotlib==3.4.3
-      - notebook==6.4.3
-      - numpy==1.21.2
-      - pandas==1.3.2
-      - scikit-learn==0.24.2
-      - seaborn==0.11.2
-      - sodapy==2.1.0
-      - tensorflow==2.6.0
+    - absl-py==0.14.0
+    - argon2-cffi==21.1.0
+    - astunparse==1.6.3
+    - bleach==4.1.0
+    - cachetools==4.2.2
+    - charset-normalizer==2.0.6
+    - clang==5.0
+    - click==8.0.1
+    - cycler==0.10.0
+    - debugpy==1.4.3
+    - decorator==5.1.0
+    - entrypoints==0.3
+    - flatbuffers==1.12
+    - gast==0.4.0
+    - google-auth==1.35.0
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - grpcio==1.40.0
+    - h5py==3.1.0
+    - idna==3.2
+    - jupyter-client==7.0.3
+    - jupyter-contrib-core==0.3.3
+    - jupyter-core==4.8.1
+    - keras==2.6.0
+    - keras-preprocessing==1.1.2
+    - kiwisolver==1.3.2
+    - markdown==3.3.4
+    - matplotlib-inline==0.1.3
+    - nbclient==0.5.4
+    - nltk==3.6.3
+    - numpy==1.19.5
+    - oauthlib==3.1.1
+    - opt-einsum==3.3.0
+    - pandas==1.3.2
+    - pandocfilters==1.5.0
+    - pillow==8.3.2
+    - prompt-toolkit==3.0.20
+    - protobuf==3.18.0
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pyyaml==5.4.1
+    - pyzmq==22.3.0
+    - regex==2021.8.28
+    - requests==2.26.0
+    - requests-oauthlib==1.3.0
+    - rsa==4.7.2
+    - send2trash==1.8.0
+    - six==1.15.0
+    - sodapy==2.1.0
+    - tensorboard==2.6.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.0
+    - tensorflow==2.6.0
+    - tensorflow-estimator==2.6.0
+    - termcolor==1.1.0
+    - terminado==0.12.1
+    - tqdm==4.62.3
+    - traitlets==5.1.0
+    - typing-extensions==3.7.4.3
+    - urllib3==1.26.6
+    - webencodings==0.5.1
+    - werkzeug==2.0.1
+    - wrapt==1.12.1
+prefix: /Users/WillemCole/miniconda3/envs/sf_building_complaints
