--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - inflect=5.3.0
   - ipykernel=6.4.1
   - ipython=7.27.0
   - jsonschema=3.2.0
@@ -22,6 +23,7 @@ dependencies:
   - scikit-learn=0.24.2
   - scipy=1.7.1
   - seaborn=0.11.2
+  - spacy=3.1.3
   - wordcloud=1.8.1
   - pip:
     - keras==2.6.0
