--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - inflect=5.3.0
   - ipykernel=6.4.1
   - ipython=7.27.0
+  - ipywidgets=7.6.3
   - jsonschema=3.2.0
   - jupyter_client=7.0.1
   - jupyter_contrib_core=0.3.3
@@ -24,6 +25,7 @@ dependencies:
   - scipy=1.7.1
   - seaborn=0.11.2
   - spacy=3.1.3
+  - tqdm=4.62.3
   - wordcloud=1.8.1
   - pip:
     - keras==2.6.0
