--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - imbalanced-learn=0.8.0
   - inflect=5.3.0
   - ipykernel=6.4.1
   - ipython=7.27.0
