Updated LSTM Model and added notebook styling.

--- a/environment.yml
+++ b/environment.yml
@@ -38,5 +38,6 @@ dependencies:
     - tensorboard-data-server==0.6.1
     - tensorboard-plugin-wit==1.8.0
     - tensorflow==2.6.0
+    - tensorflow-addons==0.14.0
     - tensorflow-estimator==2.6.0
 
