--- a/.gitattributes
+++ b/.gitattributes
@@ -8,4 +8,5 @@
 *.ipynb filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.pickle filter=lfs diff=lfs merge=lfs -text
+*.css filter=lfs diff=lfs merge=lfs -text
 . !text !filter !merge !diff
