--- a/environment.yml
+++ b/environment.yml
@@ -20,8 +20,9 @@ dependencies:
   - numpy=1.19.5
   - pandas=1.3.2
   - pickleshare=0.7.5
-  - pip=21.2.4=py37hecd8cb5_0
-  - python=3.9.5=h88f2d9e_3
+  - pip=21.2.4
+  - python=3.9.5
+  - sagemaker-python-sdk=2.59.1
   - scikit-learn=0.24.2
   - scipy=1.7.1
   - seaborn=0.11.2
