--- a/aws_environment/environment.yml
+++ b/aws_environment/environment.yml
@@ -16,7 +16,7 @@ dependencies:
   - jupyterlab_pygments=0.1.2
   - matplotlib=3.4.3
   - nb_conda_kernels=2.3.1
-  - notebook=6.4.4
+  - notebook=6.4.3
   - numpy=1.19.5
   - pandas=1.3.2
   - pickleshare=0.7.5
@@ -30,6 +30,7 @@ dependencies:
   - tqdm=4.62.3
   - wordcloud=1.8.1
   - pip:
+    - bert-tensorflow==1.0.4
     - keras==2.6.0
     - keras-preprocessing==1.1.2
     - nbclient==0.5.4
@@ -41,4 +42,5 @@ dependencies:
     - tensorflow==2.6.0
     - tensorflow-addons==0.14.0
     - tensorflow-estimator==2.6.0
+    - transformers==4.12.2
 
